--- a/imgui.ini
+++ b/imgui.ini
@@ -10,20 +10,19 @@ Size=410,799
 Collapsed=0
 
 [Window][Nau - Material Library]
-ViewportPos=458,352
+ViewportPos=877,1144
 ViewportId=0x46F77499
 Size=632,591
 Collapsed=0
 
 [Window][Nau - Profiler]
-ViewportPos=1686,750
-ViewportId=0xEAB8A304
-Size=597,800
+Pos=180,100
+Size=547,840
 Collapsed=0
 
 [Window][settings]
-Pos=12,868
-Size=520,133
+Pos=486,901
+Size=520,117
 Collapsed=0
 
 [Window][Nau - Log]
@@ -33,15 +32,15 @@ Size=520,600
 Collapsed=0
 
 [Window][Nau - Lights]
-ViewportPos=1024,389
+ViewportPos=1170,1506
 ViewportId=0x82507F60
 Size=576,592
 Collapsed=0
 
 [Window][Nau - Cameras]
-ViewportPos=935,1388
+ViewportPos=2656,1336
 ViewportId=0x8886C0B5
-Size=264,487
+Size=547,705
 Collapsed=0
 
 [Window][Nau - Scenes]
@@ -54,6 +53,18 @@ Collapsed=0
 ViewportPos=343,273
 ViewportId=0x87F19EE6
 Size=666,458
+Collapsed=0
+
+[Window][Nau - Texture Library]
+ViewportPos=2283,1437
+ViewportId=0xB6533738
+Size=550,716
+Collapsed=0
+
+[Window][Nau - Shader Library]
+ViewportPos=1213,1478
+ViewportId=0xB5E6B0B0
+Size=846,464
 Collapsed=0
 
 [Docking][Data]
