Add russian roulette path termination

--- a/imgui.ini
+++ b/imgui.ini
@@ -16,13 +16,13 @@ Size=632,591
 Collapsed=0
 
 [Window][Nau - Profiler]
-Pos=180,100
+Pos=439,39
 Size=547,840
 Collapsed=0
 
 [Window][settings]
 Pos=33,71
-Size=520,154
+Size=520,188
 Collapsed=0
 
 [Window][Nau - Log]
@@ -65,6 +65,11 @@ Collapsed=0
 ViewportPos=1213,1478
 ViewportId=0xB5E6B0B0
 Size=846,464
+Collapsed=0
+
+[Window][Nau - About]
+Pos=60,60
+Size=422,103
 Collapsed=0
 
 [Docking][Data]
